Closed Bug 1783374 Opened 2 years ago Closed 2 years ago

Perma [tier 2] Bp-clang-trunk /builds/worker/checkouts/gecko/build/clang-plugin/RefCountedInsideLambdaChecker.cpp:93:22: error: cannot initialize a variable of type 'const VarDecl *' with an rvalue of type 'ValueDecl *'

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox105 fixed)

RESOLVED FIXED
105 Branch
Tracking Status
firefox105 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: glandium)

References

(Blocks 1 open bug)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=386484072&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/dkNmra_dSw27xc6roEiXSg/runs/0/artifacts/public/logs/live_backing.log


[task 2022-08-05T02:55:23.229Z] 02:55:23     INFO -  build/clang-plugin/host_ThirdPartyPaths.o
[task 2022-08-05T02:55:23.229Z] 02:55:23     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.257Z] 02:55:23     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.258Z] 02:55:23     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_ThirdPartyPaths.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_ThirdPartyPaths.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr ThirdPartyPaths.cpp
[task 2022-08-05T02:55:23.259Z] 02:55:23     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.788Z] 02:55:23     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.789Z] 02:55:23     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_NonMemMovableTemplateArgChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_NonMemMovableTemplateArgChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/NonMemMovableTemplateArgChecker.cpp
[task 2022-08-05T02:55:23.790Z] 02:55:23     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.814Z] 02:55:23     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:23.815Z] 02:55:23     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_NonMemMovableMemberChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_NonMemMovableMemberChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/NonMemMovableMemberChecker.cpp
[task 2022-08-05T02:55:23.816Z] 02:55:23     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.472Z] 02:55:24     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.473Z] 02:55:24     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_NonTrivialTypeInFfiChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_NonTrivialTypeInFfiChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/NonTrivialTypeInFfiChecker.cpp
[task 2022-08-05T02:55:24.473Z] 02:55:24     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.565Z] 02:55:24     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.566Z] 02:55:24     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_OverrideBaseCallUsageChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_OverrideBaseCallUsageChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/OverrideBaseCallUsageChecker.cpp
[task 2022-08-05T02:55:24.566Z] 02:55:24     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.647Z] 02:55:24     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:24.648Z] 02:55:24     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_OverrideBaseCallChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_OverrideBaseCallChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/OverrideBaseCallChecker.cpp
[task 2022-08-05T02:55:24.648Z] 02:55:24     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:25.122Z] 02:55:25     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:25.123Z] 02:55:25     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_NonParamInsideFunctionDeclChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_NonParamInsideFunctionDeclChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/NonParamInsideFunctionDeclChecker.cpp
[task 2022-08-05T02:55:25.124Z] 02:55:25     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.062Z] 02:55:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.063Z] 02:55:27     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_ParamTraitsEnumChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_ParamTraitsEnumChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/ParamTraitsEnumChecker.cpp
[task 2022-08-05T02:55:27.063Z] 02:55:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.628Z] 02:55:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.629Z] 02:55:27     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_RefCountedCopyConstructorChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_RefCountedCopyConstructorChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/RefCountedCopyConstructorChecker.cpp
[task 2022-08-05T02:55:27.629Z] 02:55:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.691Z] 02:55:27     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.692Z] 02:55:27     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_RefCountedInsideLambdaChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_RefCountedInsideLambdaChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/RefCountedInsideLambdaChecker.cpp
[task 2022-08-05T02:55:27.693Z] 02:55:27    ERROR -  /builds/worker/checkouts/gecko/build/clang-plugin/RefCountedInsideLambdaChecker.cpp:93:22: error: cannot initialize a variable of type 'const VarDecl *' with an rvalue of type 'ValueDecl *'
[task 2022-08-05T02:55:27.693Z] 02:55:27     INFO -        const VarDecl *Var = Capture.getCapturedVar();
[task 2022-08-05T02:55:27.693Z] 02:55:27     INFO -                       ^     ~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-08-05T02:55:27.694Z] 02:55:27    ERROR -  /builds/worker/checkouts/gecko/build/clang-plugin/RefCountedInsideLambdaChecker.cpp:122:22: error: cannot initialize a variable of type 'const VarDecl *' with an rvalue of type 'ValueDecl *'
[task 2022-08-05T02:55:27.694Z] 02:55:27     INFO -        const VarDecl *Var = Capture.getCapturedVar();
[task 2022-08-05T02:55:27.694Z] 02:55:27     INFO -                       ^     ~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-08-05T02:55:27.694Z] 02:55:27     INFO -  2 errors generated.
[task 2022-08-05T02:55:27.695Z] 02:55:27    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:576: host_RefCountedInsideLambdaChecker.o] Error 1
[task 2022-08-05T02:55:27.695Z] 02:55:27     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:27.695Z] 02:55:27     INFO -  gmake[4]: *** Waiting for unfinished jobs....
[task 2022-08-05T02:55:30.724Z] 02:55:30     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:30.725Z] 02:55:30     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_ScopeChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_ScopeChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/ScopeChecker.cpp
[task 2022-08-05T02:55:30.726Z] 02:55:30     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:30.751Z] 02:55:30     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:30.752Z] 02:55:30     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_SprintfLiteralChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_SprintfLiteralChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/SprintfLiteralChecker.cpp
[task 2022-08-05T02:55:30.752Z] 02:55:30     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:30.942Z] 02:55:30     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:30.942Z] 02:55:30     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_TrivialDtorChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_TrivialDtorChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/TrivialDtorChecker.cpp
[task 2022-08-05T02:55:30.943Z] 02:55:30     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.161Z] 02:55:31     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.162Z] 02:55:31     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_TemporaryLifetimeBoundChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_TemporaryLifetimeBoundChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/TemporaryLifetimeBoundChecker.cpp
[task 2022-08-05T02:55:31.162Z] 02:55:31     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.683Z] 02:55:31     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.684Z] 02:55:31     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_TrivialCtorDtorChecker.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_TrivialCtorDtorChecker.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/TrivialCtorDtorChecker.cpp
[task 2022-08-05T02:55:31.684Z] 02:55:31     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.847Z] 02:55:31     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.848Z] 02:55:31     INFO -  /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o host_VariableUsageHelpers.o -c  -I/builds/worker/fetches/clang/include -std=c++14 -fno-exceptions -fno-rtti -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti -fno-exceptions -O2 -DNDEBUG=1 -DTRIMMED=1 -fPIC -I/builds/worker/checkouts/gecko/build/clang-plugin -I/builds/worker/workspace/obj-build/build/clang-plugin -I/builds/worker/workspace/obj-build/dist/include -MD -MP -MF .deps/host_VariableUsageHelpers.o.pp -I/builds/worker/workspace/obj-build/dist/include/nspr /builds/worker/checkouts/gecko/build/clang-plugin/VariableUsageHelpers.cpp
[task 2022-08-05T02:55:31.848Z] 02:55:31     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/build/clang-plugin'
[task 2022-08-05T02:55:31.849Z] 02:55:31    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: build/clang-plugin/host-objects] Error 2
[task 2022-08-05T02:55:31.849Z] 02:55:31    ERROR -  gmake[2]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:34: compile] Error 2
[task 2022-08-05T02:55:31.849Z] 02:55:31    ERROR -  gmake[1]: *** [/builds/worker/checkouts/gecko/config/rules.mk:361: default] Error 2
[task 2022-08-05T02:55:31.849Z] 02:55:31     INFO -  gmake: *** [client.mk:63: build] Error 2
[task 2022-08-05T02:55:31.869Z] 02:55:31     INFO -  0 compiler warnings present.
[task 2022-08-05T02:55:32.031Z] 02:55:32    ERROR - Return code: 2
[task 2022-08-05T02:55:32.031Z] 02:55:32  WARNING - setting return code to 2
[task 2022-08-05T02:55:32.031Z] 02:55:32    FATAL - 'mach build -v' did not run successfully. Please check log for errors.
[task 2022-08-05T02:55:32.031Z] 02:55:32    FATAL - Running post_fatal callback...
[task 2022-08-05T02:55:32.031Z] 02:55:32    FATAL - Exiting -1
[task 2022-08-05T02:55:32.031Z] 02:55:32     INFO - [mozharness: 2022-08-05 02:55:32.031680Z] Finished build step (failed)
[task 2022-08-05T02:55:32.031Z] 02:55:32     INFO - Running post-run listener: _parse_build_tests_ccov
[task 2022-08-05T02:55:32.032Z] 02:55:32     INFO - Running command: ['/builds/worker/workspace/obj-build/_virtualenvs/common/bin/python', 'mach', 'python', 'testing/parse_build_tests_ccov.py'] in /builds/worker/checkouts/gecko
[task 2022-08-05T02:55:32.032Z] 02:55:32     INFO - Copy/paste: /builds/worker/workspace/obj-build/_virtualenvs/common/bin/python mach python testing/parse_build_tests_ccov.py
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO - Using env: {'ACCEPTED_MAR_CHANNEL_IDS': 'firefox-mozilla-central',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'DEBIAN_FRONTEND': 'noninteractive',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'DISPLAY': ':2',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'EXTRA_MOZHARNESS_CONFIG': '{"disable_package_metrics": true, '
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -                             '"mozconfig_variant": "plain-opt-trunk", "objdir": '
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -                             '"obj-build", "update_channel": "nightly"}',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'GECKO_BASE_REPOSITORY': 'https://hg.mozilla.org/mozilla-unified',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'GECKO_HEAD_REPOSITORY': 'https://hg.mozilla.org/mozilla-central',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'GECKO_HEAD_REV': '306869bdfd8ec55b1698459b6ab3dddf212b1906',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'GECKO_PATH': '/builds/worker/checkouts/gecko',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'GRCOV_PATH': '/builds/worker/fetches/grcov',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'HG_SHARE_BASE_DIR': '/builds/hg-shared',
[task 2022-08-05T02:55:32.033Z] 02:55:32     INFO -  'HG_STORE_PATH': '/builds/worker/checkouts/hg-store',

I don't see any way that changes to the regular expression engine inside SpiderMonkey could cause build failures in the clang plugin.

Was the clang version bumped? It looks like maybe the return type of Capture.getCapturedVar() changed.

Flags: needinfo?(iireland)
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Blocks: 1614858
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/bcab9787d563 Adjust RefCountedInsideLambdaChecker to clang trunk changes. r=andi
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: