Bug 1783374 - Adjust RefCountedInsideLambdaChecker to clang trunk changes. r=andi

`getCapturedVar()` now returns a `ValueDecl`.
(https://github.com/llvm/llvm-project/commit/127bf44385424891eb04cff8e52d3f157fc2cb7c)

Differential Revision: https://phabricator.services.mozilla.com/D154046